# prometheus-universe-engine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
data-pipeline/: README.md  requirements.txt
docs/: architecture.md  axial_body_rotation.md  body_inspector_details.md  body_label_visibility_controls.md  camera.md  camera_view_presets.md  catalog_driven_solar_system_render.md  catalog_hud_stats.md  controls.md  coordinates.md  data_sources.md  decisions.md  earth_atmosphere_clouds.md  earth_procedural_landmasses.md  educational_solar_system_scale.md  floating_origin.md  hud_readable_panel.md  hud_time_polish.md  hud_visibility_controls.md  limitations.md  major_moons_catalog.md  moon_system_focus.md  orbit_lines_and_labels.md  orbit_visibility_controls.md  phase2_body_inspector.md  phase_0_mvp_status.md  phase_1_solar_system_data_model.md  physics.md  post_phase_1_visual_polish_status.md  (+26 more)
engine/: Cargo.toml
engine/src/: lib.rs  main.rs
engine/src/camera/: mod.rs  presets.rs
engine/src/coordinates/: mod.rs
engine/src/floating_origin/: mod.rs
engine/src/interaction/: focus.rs  mod.rs  picking.rs  selection.rs
engine/src/render/: gpu_layout.rs  mod.rs  solar_system.rs
engine/src/render/solar_system/: earth.rs  earth_atmosphere_cloud_tests.rs  earth_landmass_tests.rs  labels.rs  orbits.rs  planet_surface.rs  real_solar_halo_glow_tests.rs  saturn.rs  saturn_ring_mesh_tests.rs  starfield.rs  sun.rs  tests.rs
engine/src/simulation/: bodies.rs  catalog.rs  mod.rs  solar_system.rs
engine/src/time/: mod.rs
engine/src/ui/: hud.rs
(+2 files in other folders)
